--- a/intro.qmd
+++ b/intro.qmd
@@ -246,14 +246,11 @@ flowchart LR
 
 Confounding can be controlled either before or after a study is conducted. Various methods are available to control for confounding, including matching, stratification, and more advanced multivariate techniques [@grimes2002].
 
-- **Pairwise matching:** In a case-control study where smoking is considered a confounding variable, cases and controls can be matched based on smoking status.
+-   **Pairwise matching:** In a case-control study where smoking is considered a confounding variable, cases and controls can be matched based on smoking status.
 
+-   **Stratification:** After a study is conducted, results can be stratified by levels of the confounding variable. In the smoking example, results would be calculated separately for smokers and non-smokers to determine if the same effect occurs independently of smoking.
 
-- **Stratification:** After a study is conducted, results can be stratified by levels of the confounding variable. In the smoking example, results would be calculated separately for smokers and non-smokers to determine if the same effect occurs independently of smoking.
-
-
-- **Multivariate techniques:**  Mathematical modelling examines the potential effect of one variable while simultaneously controlling for the effect of many other variables.
-
+-   **Multivariate techniques:** Mathematical modelling examines the potential effect of one variable while simultaneously controlling for the effect of many other variables.
 
 ## Types of data in variables
 
@@ -280,20 +277,17 @@ flowchart TB
 
  
 
-
 ::: {.callout-tip icon="false"}
 ## Note
 
-The **type of data** in variables is an important factor in determining the most appropriate **statistical analysis** of the data.      
+The **type of data** in variables is an important factor in determining the most appropriate **statistical analysis** of the data.
 :::
-
 
 ### Categorical data
 
 **A. Nominal data**
 
 Nominal data consists of distinct, unordered categories that are labeled but not measured, only **counted**. These categories can be binary, such as diagnosed/not diagnosed with depression, or they can have more than two categories, such as **eye color** (e.g., brown, blue, green, gray) or **type of therapy** (e.g., cognitive-behavioral therapy, psychoanalysis, humanistic therapy).
-
 
 ::: callout-important
 ## Numerical representation of categories are just codes
@@ -305,22 +299,15 @@ We can represent diagnosed/not diagnosed with depression as 1/0 and cognitive-be
 
 **B. Ordinal data**
 
-When categories can be ordered, the data are of **ordinal type**. For example, patients may rate their **pain** as minimal, moderate, severe, or unbearable. In this case, there is a natural order to the values, as moderate pain is more intense than minimal but less than severe.
-Another common example of ordinal data is the **Likert scale**, where respondents might indicate their level of agreement with a statement on a scale such as from 1 (strongly disagree) to 5 (strongly agree).
-
-
+When categories can be ordered, the data are of **ordinal type**. For example, patients may rate their **pain** as minimal, moderate, severe, or unbearable. In this case, there is a natural order to the values, as moderate pain is more intense than minimal but less than severe. Another common example of ordinal data is the **Likert scale**, where respondents might indicate their level of agreement with a statement on a scale such as from 1 (strongly disagree) to 5 (strongly agree).
 
 ::: callout-important
 ## IMPORTANT
 
-- Ordinal data are often transformed into binary data to simplify analysis, presentation, and interpretation, though this can result in a **loss of information**.
+-   Ordinal data are often transformed into binary data to simplify analysis, presentation, and interpretation, though this can result in a **loss of information**.
 
-
-- Although the **Likert scale** consists of ordered categories, the levels can be **treated like numeric data**, allowing scores from a questionnaire to be summed or averaged for a comprehensive assessment of respondents' attitudes or feelings (total score of the participant).
-
+-   Although the **Likert scale** consists of ordered categories, the levels can be **treated like numeric data**, allowing scores from a questionnaire to be summed or averaged for a comprehensive assessment of respondents' attitudes or feelings (total score of the participant).
 :::
-
-
 
 ### Numerical data
 
@@ -332,20 +319,16 @@ In practice discrete data are often treated in statistical analyses as if they w
 
 \vspace{15pt}
 
-
 **B. Continuous data**
 
-Continuous data are numbers (usually with units) that can **theoretically** take **any value** within a given range. Examples of continuous variables include **height**, **weight**, **body temperature**, and **reaction time**.
-However, in practice, these variables are often measured **discretely**, constrained by the precision of measuring instruments and the study's specific objectives. For instance, although height can be a continuous value, it is typically recorded in discrete steps. A person may measure 172.345 cm tall, but this would usually be recorded as 172 cm.
+Continuous data are numbers (usually with units) that can **theoretically** take **any value** within a given range. Examples of continuous variables include **height**, **weight**, **body temperature**, and **reaction time**. However, in practice, these variables are often measured **discretely**, constrained by the precision of measuring instruments and the study's specific objectives. For instance, although height can be a continuous value, it is typically recorded in discrete steps. A person may measure 172.345 cm tall, but this would usually be recorded as 172 cm.
 
 ::: callout-important
 ## Categorization of numerical data leads to a loss of information
 
-It is important to note that continuous data are often categorized to create categorical variables. For example, body mass index (BMI), which is a continuous variable, is typically converted into an ordinal variable with four categories: underweight, normal weight, overweight, and obesity. However, dividing continuous variables into categories results in a **considerable loss of information**.
+It is important to note that continuous data are often categorized to create categorical variables. For example, body mass index (BMI)—a continuous variable that measures weight relative to height—is typically converted into an ordinal variable with four categories: underweight, normal weight, overweight, and obese. However, dividing continuous variables into categories results in a **considerable loss of information**. Furthermore, the reverse transformation is impossible; a categorical variable cannot be transformed into a continuous variable.
 :::
-
 
 Next is a YouTube video by Associate Professor Mike Marin from the University of British Columbia that comprehensively explains the different types of variables.
 
 {{< video https://www.youtube.com/watch?v=ZxV-kf0yBss&t=2s title="Variables and Types of Variables">}}
-
